# Topgun

./: .gitignore  Update LOG.xlsx  _updatelog_dump.txt
.claude/: settings.local.json
BattleViewer/BattleServer_Low_V0.2/: Manifest_NonUFSFiles_Win64.txt  Manifest_UFSFiles_Win64.txt
BattleViewer/BattleServer_V0.2/: Manifest_NonUFSFiles_Win64.txt  Manifest_UFSFiles_Win64.txt
BehaviorTree/AIP_DCS/: AIP_DCS.vcxproj  AIP_DCS.vcxproj.filters  dllmain.cpp
BehaviorTree/AIP_DCS_원본백업/: AIP_DCS.sln  LibMain.cpp
BehaviorTree/AIP_DCS_원본백업/Geometry/: Angle.cpp  AxisAngle.h  CMakeLists.txt  Controller_CY.cpp  CoordinateConverter.cpp  CoordinateConverter.h  EulerAngle.h  Math.cpp  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Vector3.cpp
BehaviorTree/PropertySheets/: Bullet_release.props  DIS_debug.props  Essential_MRM_release.props  Essential_release.props  MAKRTI_debug.props  MAKRTI_release.props  MRMApp_release.props  ModelLibrary_relase.props  VRF_RelWithDebInfo_HLA1516.props  VRF_RelWithDebInfo_HLA1516E.props  VRF_release_HLA1516E.props  glew_debug.props  glew_release.props
PropertySheets/: Bullet_debug.props  Essential_MRM_debug.props  Essential_debug.props  JSBSim.props  LDFP_Model.props  MAKRTI_1516E_debug.props  MAKRTI_1516E_release.props  MRMAdapter_debug.props  MRMApp_debug.props  MRMBase_debug.props
강화학습환경/Release/: DogFightEnvWrapper.py  FighterSim.py  GeoMathUtil.py  JSBSimWrapper.py  README.md  Rule_dummy.xml  Rule_forTraining.xml  Rule_mine.xml  Rule_puretest.xml  Rule_v0.xml  Rule_v17.xml  (+11 more)
상대기체 공유파일/: Task_LeadPredict_v17.cpp
(+552 files in other folders)
